# aruaru-db

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GITHUB_SETUP.md  LICENSE  PLATFORMS.md  PORTING.md  README-Arabic.md  README-Chinese.md  README-English.md  README-France.md  README-Germany.md  README-Italy.md  README-Japan.md  README-Korea.md  README-Russia.md  README-Spain.md  README.md  aruaru.h  install.ps1  install.sh
.github/workflows/: admin-build.yml  ci.yml  release.yml
admin/: README.md  package.json
admin/src-tauri/src/: main.rs
admin/src/pages/: CommitLog.tsx  QueryEditor.tsx
admin/src/pages/backup/: BackupManager.tsx
admin/src/pages/cluster/: ClusterView.tsx
admin/src/pages/federation/: FederationView.tsx
admin/src/pages/parallel/: ParallelView.tsx
admin/src/pages/registry/: DatabaseRegistry.tsx
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/tokyo/runo/aruarudb/: MainActivity.kt  PowerProfile.kt  ProfileSelectActivity.kt
android/app/src/main/res/drawable/: ic_launcher_alwayson.xml  ic_launcher_normal.xml  ic_launcher_powersave.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/layout-sw600dp/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
aruaru-admin/: README.md  package.json  pnpm-workspace.yaml
aruaru-admin/aruaru-db-admin-web/: .env.example  Dockerfile  index.html  nginx.conf  vite.config.ts
aruaru-admin/aruaru-db-admin-web/src/: main.tsx
aruaru-admin/aruaru-db-admin-win/: index.html  package.json  tsconfig.json  vite.config.ts
aruaru-admin/aruaru-db-admin-win/installer/: README.md  aruaru-admin.vbs  setup.nsi  setup.wxs
aruaru-admin/aruaru-db-admin-win/src/: main.tsx
aruaru-admin/core/: package.json
aruaru-admin/core/src/: App.tsx  index.ts
aruaru-admin/core/src/api/: config.ts  invoke.ts
aruaru-admin/core/src/pages/: BranchView.tsx  CommitLog.tsx  Dashboard.tsx  MigrationWizard.tsx
aruaru-admin/core/src/pages/cluster/: ClusterView.tsx
aruaru-admin/core/src/pages/federation/: FederationView.tsx
aruaru-admin/core/src/pages/parallel/: ParallelView.tsx
aruaru-admin/core/src/pages/registry/: DatabaseRegistry.tsx
aruaru-db-v0.5.0/aruaru-db/: PLATFORMS.md  README.md
aruaru-db-v0.5.0/aruaru-db/admin/src/: App.tsx
aruaru-db-v0.5.0/aruaru-db/admin/src-tauri/: Cargo.toml
aruaru-db-v0.5.0/aruaru-db/admin/src/pages/: MigrationWizard.tsx
aruaru-db-v0.5.0/aruaru-db/aruaru-admin/aruaru-db-admin-web/: package.json  tailwind.config.js
aruaru-db-v0.5.0/aruaru-db/aruaru-admin/aruaru-db-admin-web/public/: manifest.webmanifest
aruaru-db-v0.5.0/aruaru-db/aruaru-admin/aruaru-db-admin-win/installer/: launcher.cmd
aruaru-db-v0.5.0/aruaru-db/aruaru-admin/core/src/: styles.css
aruaru-db-v0.5.0/aruaru-db/aruaru-admin/core/src/api/: platform.ts
aruaru-db-v0.5.0/aruaru-db/aruaru-admin/core/src/pages/backup/: BackupManager.tsx
aruaru-db-v0.5.0/aruaru-db/crates/aruaru-backup/src/: lib.rs
aruaru-db-v0.5.0/aruaru-db/crates/aruaru-core/src/: lib.rs
aruaru-db-v0.5.0/aruaru-db/crates/aruaru-core/src/version/: mod.rs
aruaru-db-v0.5.0/aruaru-db/crates/aruaru-migrate/: Cargo.toml
aruaru-db-v0.5.0/aruaru-db/crates/aruaru-query/: Cargo.toml
aruaru-db-v0.5.0/aruaru-db/crates/aruaru-query/src/: olap.rs
aruaru-db-v0.5.0/aruaru-db/crates/aruaru-registry/src/: lib.rs
aruaru-db-v0.5.0/aruaru-db/crates/aruaru-wire/src/: lib.rs
aruaru-db-v0.5.0/aruaru-db/drivers/: README.md
aruaru-db-v0.5.0/aruaru-db/drivers/dotnet/: AruaruClient.cs
aruaru-db-v0.5.0/aruaru-db/drivers/go/: client.go
aruaru-db-v0.5.0/aruaru-db/drivers/java/: AruaruClient.java
aruaru-db-v0.5.0/aruaru-db/drivers/nodejs/: client.ts
aruaru-db-v0.5.0/aruaru-db/drivers/php/: AruaruClient.php
aruaru-db-v0.5.0/aruaru-db/drivers/python/: client.py
aruaru-db-v0.5.0/aruaru-db/drivers/ruby/: aruaru_client.rb
cosmo/: README.md  compose.cosmo.yaml  config.yaml  graph.yaml
crates/aruaru-backup/: Cargo.toml
crates/aruaru-backup/src/: lib.rs  s3.rs  sftp.rs
crates/aruaru-core/: Cargo.toml
crates/aruaru-core/src/catalog/: mod.rs
crates/aruaru-core/src/storage/: mod.rs
crates/aruaru-core/src/version/: branch.rs  commit.rs  diff.rs  mod.rs  prolly.rs
crates/aruaru-dist/: Cargo.toml
crates/aruaru-dist/src/: dual_database.rs  lib.rs  multi_raft.rs  raid_z_backend.rs  snapshot_pairing.rs
crates/aruaru-dist/src/raft/: command.rs  driver.rs  log.rs  mod.rs  node.rs  rpc.rs  transport.rs  writer.rs
crates/aruaru-dist/src/shard/: mod.rs  topology.rs
crates/aruaru-graphql/: Cargo.toml
crates/aruaru-graphql/src/: admin_resolvers.rs  admin_types.rs  lib.rs
crates/aruaru-migrate/: Cargo.toml
crates/aruaru-migrate/src/: from_csv.rs  from_mysql.rs  from_parquet.rs  from_postgres.rs  lib.rs  main.rs  schema_convert.rs  sql_build.rs  target.rs
crates/aruaru-query/: Cargo.toml  README.md
crates/aruaru-query/src/: engine.rs  lib.rs  olap.rs  parser.rs
crates/aruaru-registry/: Cargo.toml  README.md
crates/aruaru-registry/src/: adapter.rs  crawler.rs  registry.rs  scheduler.rs  seed.rs  types.rs
crates/aruaru-server/: Cargo.toml
crates/aruaru-server/src/: admin.rs  cluster.rs  main.rs
crates/aruaru-wire/: Cargo.toml
crates/aruaru-wire/src/: auth.rs  lib.rs  payload_crypto.rs  tls.rs
crates/aruaru-wire/tests/: extended_protocol.rs
docker/: Dockerfile  compose.cluster.yml
docs/: DATABASE.md  FORMAT-ARU3-Japan.md
drivers/: README.md
drivers/aruaru-db-cpp/: aruaru_db.h
drivers/aruaru-db-dotnet/: AruaruDriver.cs
drivers/aruaru-db-go/: aruaru_db.go
drivers/aruaru-db-java/: AruaruDriver.java
drivers/aruaru-db-nodejs/: index.ts
drivers/aruaru-db-php/: AruaruDriver.php
drivers/aruaru-db-python/: aruaru_db.py
drivers/aruaru-db-ruby/: aruaru_db.rb
drivers/aruaru-db-rust/: Cargo.toml
drivers/aruaru-db-rust/src/: error.rs  lib.rs  types.rs
workflows/: cross-build.yml
