[workspace]
resolver = "2"
members = [
    "crates/aruaru-core",
    "crates/aruaru-dist",
    "crates/aruaru-query",
    "crates/aruaru-wire",
    "crates/aruaru-graphql",
    "crates/aruaru-migrate",
    "crates/aruaru-registry",
    "crates/aruaru-server",
    "crates/aruaru-backup",
]

[workspace.package]
version      = "0.5.0"
edition      = "2021"
authors      = ["aruaru-DB Contributors"]
license      = "Apache-2.0"
repository   = "https://github.com/aruaru-db/aruaru-db"
homepage     = "https://aruaru-db.dev"
rust-version = "1.82"

[workspace.dependencies]
# ── Storage ─────────────────────────────────────────
fjall         = "2"
redb          = "2"
arrow         = { version = "55", features = ["prettyprint"] }
parquet       = { version = "55", features = ["async"] }

# ── Query Engine ─────────────────────────────────────
datafusion    = "47"
sqlparser     = { version = "0.52", features = ["visitor"] }

# ── Distribution ─────────────────────────────────────
openraft      = { version = "0.9", features = ["serde"] }

# ── Protocol ─────────────────────────────────────────
pgwire        = "0.27"
poem          = { version = "3", features = ["server"] }
async-graphql = { version = "7", features = ["chrono", "uuid"] }
async-graphql-poem = "7"

# ── Async / Runtime ─────────────────────────────────
tokio         = { version = "1", features = ["full"] }
futures       = "0.3"

# ── Registry / Crawl / Adapters ─────────────────────
reqwest       = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex         = "1"
tokio-postgres = "0.7"
mysql_async   = { version = "0.34", default-features = false, features = ["default-rustls"] }
mongodb       = "2.8"
scylla        = "0.13"
scraper       = "0.20"

# ── Serialization ────────────────────────────────────
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
bincode       = "2"

# ── Utilities ────────────────────────────────────────
sha2          = "0.10"
hex           = "0.4"
uuid          = { version = "1", features = ["v4", "v7", "serde"] }
chrono        = { version = "0.4", features = ["serde"] }
bytes         = "1"
thiserror     = "1"
anyhow        = "1"
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap          = { version = "4", features = ["derive"] }
config        = "0.14"
dashmap       = "6"
parking_lot   = "0.12"

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = "symbols"

[profile.dev]
opt-level     = 1        # ストレージクレートのデバッグビルドを高速化
