[workspace]
resolver = "2"
members = [
    "crates/aruaru-core",
    "crates/aruaru-dist",
    "crates/aruaru-query",
    "crates/aruaru-wire",
    "crates/aruaru-graphql",
    "crates/aruaru-migrate",
    "crates/aruaru-registry",
    "crates/aruaru-server",
    "crates/aruaru-backup",
]

[workspace.package]
version      = "0.5.0"
edition      = "2021"
authors      = ["aruaru-DB Contributors"]
license      = "Apache-2.0"
repository   = "https://github.com/aruaru-db/aruaru-db"
homepage     = "https://aruaru-db.dev"
rust-version = "1.82"

[workspace.dependencies]
# ── Storage ─────────────────────────────────────────
fjall         = "2"
redb          = "2"
arrow         = { version = "55", features = ["prettyprint"] }
parquet       = { version = "55", features = ["async"] }

# ── Query Engine ─────────────────────────────────────
datafusion    = "47"
sqlparser     = { version = "0.52", features = ["visitor"] }

# ── Distribution ─────────────────────────────────────
openraft      = { version = "0.9", features = ["serde"] }

# ── Protocol ─────────────────────────────────────────
pgwire        = { version = "0.27", features = ["scram"] }
poem          = { version = "3", features = ["server"] }
async-graphql = { version = "7", features = ["chrono", "uuid"] }
async-graphql-poem = "7"

# ── 通信路セキュリティ (TLS / QUIC / ペイロード暗号化) ──
rustls          = "0.23"
tokio-rustls    = "0.26"
rustls-pemfile  = "2"
rustls-pki-types = "1"
quinn           = "0.11"
chacha20poly1305 = "0.10"
hkdf            = "0.12"
rand            = "0.8"

# ── Async / Runtime ─────────────────────────────────
tokio         = { version = "1", features = ["full"] }
futures       = "0.3"

# ── Registry / Crawl / Adapters ─────────────────────
reqwest       = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex         = "1"
tokio-postgres = "0.7"
mysql_async   = { version = "0.34", default-features = false, features = ["default-rustls"] }
mongodb       = "2.8"
scylla        = "0.13"
scraper       = "0.20"

# ── Serialization ────────────────────────────────────
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
bincode       = "2"
# RJSON (旧Rust-JSON): hybrid lenient/strict JSON crate, split out of
# open-runo into its own repo (https://github.com/aon-co-jp/RJSON,
# 2026-07-17〜18でRust-JSON→RJSONへ改名、RFrontEnd傘下へ移動). Path
# dependency since both repos live side-by-side under F:\open-runo, same
# pattern as aruaru-dist's open_raid_z_core path dependency.
rust-json     = { path = "../RFrontEnd/RJSON" }

# ── Utilities ────────────────────────────────────────
sha2          = "0.10"
hex           = "0.4"
uuid          = { version = "1", features = ["v4", "v7", "serde"] }
chrono        = { version = "0.4", features = ["serde"] }
bytes         = { version = "1", features = ["serde"] }
thiserror     = "1"
anyhow        = "1"
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap          = { version = "4", features = ["derive"] }
config        = "0.14"
dashmap       = "6"
parking_lot   = "0.12"

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = "symbols"

[profile.dev]
opt-level     = 1        # ストレージクレートのデバッグビルドを高速化
