[package]
name        = "aruaru-backup"
description = "aruaru-DB backup, restore, point-in-time recovery, and S3/SFTP export"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aruaru-core  = { path = "../aruaru-core" }
aruaru-query = { path = "../aruaru-query" }
parquet.workspace  = true
arrow.workspace    = true
tokio.workspace    = true
serde.workspace    = true
serde_json.workspace = true
rust-json.workspace = true
anyhow.workspace   = true
thiserror.workspace = true
tracing.workspace  = true
uuid.workspace     = true
chrono.workspace   = true
sha2.workspace     = true
hex.workspace      = true
# S3-compatible backup destination (AWS/MinIO/R2). `rusty-s3` generates
# SigV4-presigned request URLs (the actual cryptographic signing is
# delegated to it rather than hand-rolled, matching this codebase's
# existing "audited crypto library for the signing, hand-rolled protocol
# glue" convention) so we can PUT/DELETE/LIST objects with a plain HTTP
# client (`reqwest`, already a workspace dependency elsewhere) instead of
# pulling in the much heavier `aws-sdk-s3`.
rusty-s3 = "0.7"
reqwest = { workspace = true }
