[package]
name        = "aruaru-backup"
description = "aruaru-DB backup, restore, point-in-time recovery, and S3/SFTP export"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aruaru-core  = { path = "../aruaru-core" }
aruaru-query = { path = "../aruaru-query" }
parquet.workspace  = true
arrow.workspace    = true
tokio.workspace    = true
serde.workspace    = true
serde_json.workspace = true
rust-json.workspace = true
anyhow.workspace   = true
thiserror.workspace = true
tracing.workspace  = true
uuid.workspace     = true
chrono.workspace   = true
sha2.workspace     = true
hex.workspace      = true
# S3-compatible backup destination (AWS/MinIO/R2). `rusty-s3` generates
# SigV4-presigned request URLs (the actual cryptographic signing is
# delegated to it rather than hand-rolled, matching this codebase's
# existing "audited crypto library for the signing, hand-rolled protocol
# glue" convention) so we can PUT/DELETE/LIST objects with a plain HTTP
# client (`reqwest`, already a workspace dependency elsewhere) instead of
# pulling in the much heavier `aws-sdk-s3`.
rusty-s3 = "0.7"
reqwest = { workspace = true }
# SFTP backup destination. `russh` is a pure-Rust SSH client implementation
# (no libssh2/OpenSSL C dependency, unlike the `ssh2` crate) which matches
# this workspace's existing preference for pure-Rust crates over C-binding
# wrappers (e.g. `rustls` over openssl elsewhere in this workspace);
# `russh-sftp` layers the SFTP subsystem protocol on top of a `russh`
# channel. Only `aruaru-backup` uses these, so (matching the `rusty-s3`
# precedent just above) they're added directly here rather than to the
# workspace-wide `[workspace.dependencies]` table.
# `default-features = false` + `ring` (instead of the default `aws-lc-rs`
# crypto backend): `aws-lc-rs`'s build script requires a NASM assembler
# toolchain, which is not guaranteed to be present on a plain dev machine;
# `ring` builds with just a C compiler (already required elsewhere in this
# workspace for other native deps), avoiding an extra hard toolchain
# requirement for a single backup-destination feature.
russh      = { version = "0.62", default-features = false, features = ["rsa", "ring", "flate2"] }
russh-sftp = "2"
