[package]
name        = "aruaru-dist"
description = "aruaru-DB distributed layer: openraft consensus + range sharding"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aruaru-core  = { path = "../aruaru-core" }
openraft      = { workspace = true }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
rust-json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
tracing.workspace = true
uuid.workspace = true
async-trait   = "0.1"
reqwest.workspace = true
futures.workspace = true
sha2.workspace = true
hex.workspace = true
# DUAL DATABASE構成(aruaru-db x PostgreSQL、`open-web-server/CLAUDE.md`
# 拡張要件(4)「DB書き込みの四重化」の②。open-web-server-ledgerの
# postgres_wal.rs(①)と同じ`sqlx`postgres featureを使う。
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono"] }
chrono.workspace = true
# aruaru-db commit x open-raid-z スナップショット連携(`open_raid_z` feature
# 有効時のみ)。別Cargoワークスペースへの path 依存であり、
# `default-features = false` により WinFsp/dxc/Windows SDK は不要
# (CPUフォールバックのみ、FileBackedDeviceによるファイルI/Oで検証可能)。
open_raid_z_core = { path = "../../../open-raid-z/open_runo_zfs_source/open_raid_z_core", default-features = false, optional = true }

[features]
open_raid_z = ["dep:open_raid_z_core"]
