[package]
name        = "aruaru-migrate"
description = "aruaru-DB migration tools: Postgres / CockroachDB / Snowflake / CSV"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aruaru-wire     = { path = "../aruaru-wire" }
aruaru-registry = { path = "../aruaru-registry" }
arrow.workspace    = true
arrow-cast         = "55"
parquet.workspace  = true
tokio.workspace    = true
tokio-postgres.workspace = true
serde.workspace    = true
serde_json.workspace = true
anyhow.workspace   = true
tracing.workspace  = true
clap.workspace     = true
csv                = "1"
reqwest = { version = "0.12", features = ["json"] }

[[bin]]
name = "aruaru-migrate"
path = "src/main.rs"
