[package]
name        = "aruaru-db-rust"
version     = "0.5.0"
edition     = "2021"
description = "aruaru-DB Rust ドライバー — Git-on-SQL データベースへの Rust ネイティブ非同期クライアント"
license     = "Apache-2.0"
repository  = "https://github.com/aruaru-db/aruaru-db"
homepage    = "https://aruaru-db.dev"
documentation = "https://docs.rs/aruaru-db-rust"
readme      = "README.md"
keywords    = ["aruaru", "database", "postgresql", "git-on-sql", "async"]
categories  = ["database", "asynchronous"]
rust-version = "1.82"

[dependencies]
# PostgreSQL ワイヤ互換接続 (aruaru-server は pgwire 互換)
tokio-postgres    = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1"] }
tokio             = { version = "1",   features = ["full"] }
deadpool-postgres = "0.14"
# 型
chrono     = { version = "0.4", features = ["serde"] }
uuid       = { version = "1",   features = ["serde"] }
serde      = { version = "1",   features = ["derive"] }
serde_json = "1"
# エラー
thiserror  = "1"
# 接続 URL パース
url        = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
